59. Run and fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -18,7 +18,7 @@
     .contact-info {
         line-height: 2;
     }
-    #footer .socials-list {
+    .socials-list {
         font-size: 48px;
     }
     #footer .socials-list a {
