--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    background: url('/assets/img/slider/slider2.jpg') top center / cover no-repeat;
 }
 
 #slider .text-heading {
@@ -356,6 +356,8 @@ html {
     border: none;
     cursor: pointer;
     text-align: center;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
